Improve clarity in 'Cataluña_Map.ipynb'

--- a/Cataluña_Map.ipynb
+++ b/Cataluña_Map.ipynb
@@ -47,7 +47,8 @@
    "id": "f0810eb3-d59d-46ea-865e-76ae7e6c2c1d",
    "metadata": {},
    "source": [
-    "# Create Cataluña map"
+    "# Create Cataluña map\n",
+    "IT IS NOT NECESSARY TO RUN AGAIN THIS NOTEBOOK SECTION. THE DATA IS ALREADY ON CARTO DIRECTORY."
    ]
   },
   {
@@ -118,7 +119,7 @@
    "id": "422d1b7d-4711-4938-bc3d-54cb2d884f0a",
    "metadata": {},
    "source": [
-    "## Saving the Cataluña's map"
+    "## Saving the Cataluña's map info"
    ]
   },
   {
