Check of some problems with the execution of the code (restarting the kernel so no a priori variables in the execution). Some small aesthetic changes in the maps.

--- a/Religious Centres/Correlation/Correlations_religion.ipynb
+++ b/Religious Centres/Correlation/Correlations_religion.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "a648a133-b5c4-479c-8e6f-9691b7b25018",
    "metadata": {
     "tags": []
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "78a1be26-1f2e-4f1a-a2d5-c732f610f06f",
    "metadata": {
     "tags": []
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "52d8b229-a878-4de8-81ba-e1a5236cce69",
    "metadata": {
     "tags": []
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "e3d681f7-745f-4a3f-a015-5ef393b3f19e",
    "metadata": {
     "tags": []
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "a817b082-4f37-4b8a-bacb-2625fb427cf9",
    "metadata": {
     "tags": []
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "cbdf1984-047d-4411-81cb-6f8a5b43e3a7",
    "metadata": {
     "tags": []
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "id": "a19174c2-e59f-402c-9e9c-9cc8485d00d3",
    "metadata": {
     "tags": []
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "b3ad792f-9977-4670-b4bd-9af907807133",
    "metadata": {
     "tags": []
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "id": "f22939ad-2a5d-47e6-b41e-43def2b91741",
    "metadata": {
     "tags": []
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "id": "d41e9882-5d8c-4edc-af42-417ef8801b1c",
    "metadata": {
     "tags": []
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "id": "26fcd990-5488-4085-80a7-a1a9e89f59cb",
    "metadata": {
     "tags": []
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "id": "4bafe3d0-91e3-4e34-8f0f-c6605a7b6ea3",
    "metadata": {
     "tags": []
@@ -728,8 +728,9 @@
    "id": "de9ca232-6f15-4180-a3ea-4da6b7af9fb4",
    "metadata": {},
    "source": [
-    "## EVEN IF LESS CORRELATED...\n",
-    "## THE RESULT STILLS WITH HUGE SIGNIFICANCE (p near 0) !!! "
+    " EVEN IF LESS CORRELATED...\n",
+    " \n",
+    " THE RESULT STILLS WITH HUGE SIGNIFICANCE (p near 0) !!! "
    ]
   }
  ],
