--- a/Religious Centres/Extract_info_datasets.ipynb
+++ b/Religious Centres/Extract_info_datasets.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "7ada7a94-2b66-458b-aad0-9fa93c046676",
    "metadata": {
     "tags": []
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "ad3ee607",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
        "1  MULTIPOLYGON (((1.61829 41.76885, 1.61278 41.7...  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "38215a94",
    "metadata": {},
    "outputs": [
@@ -230,7 +230,7 @@
        "1                          4.69                              22.17  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "42eccab0",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
        "1                              22.17  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "92057334",
    "metadata": {},
    "outputs": [
@@ -484,7 +484,7 @@
        "1                         <0.01                               2.10  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "f826519a-9797-4274-8121-c54c1e7a8ea0",
    "metadata": {},
    "outputs": [
@@ -655,7 +655,7 @@
        "[2 rows x 46 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "id": "b2ca1c41-66bd-4c4d-8ad9-3c7f1e3702d6",
    "metadata": {},
    "outputs": [
@@ -863,7 +863,7 @@
        "[2 rows x 66 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "559a2ead-d1bb-488a-bdaf-2ab2946a42b4",
    "metadata": {},
    "outputs": [],
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "id": "b233841b-00eb-48ad-a924-ff33a7b5c434",
    "metadata": {
     "tags": []
@@ -1022,6 +1022,13 @@
    "outputs": [],
    "source": [
     "# Número de religiones (columnas de religiones)\n",
+    "religions=['Catholic_2021', 'Evangelical_2021',\n",
+    "       'Islam_2021', 'Sikhisme_2021', 'Judaisme_2021', 'Budisme_2021',\n",
+    "       'Hinduisme_2021', 'Altres_2021', 'Testimonis cristians de Jehovà_2021',\n",
+    "       'Església Adventista del Setè Dia_2021', \"Fe Bahà'í_2021\",\n",
+    "       'Esglésies orientals_2021',\n",
+    "       'Església de Jesucrist dels Sants dels Darrers Dies_2021',\n",
+    "       'Taoisme_2021', 'Paganisme_2021']\n",
     "num_religions = len(religions)\n",
     "\n",
     "# Calcular las proporciones por municipio (como antes)\n",
@@ -1058,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "id": "c2fcd723-d20f-4cfb-86c2-cc61e79af8c6",
    "metadata": {
     "tags": []
